src/objects/FA_Course__c.object
<CustomObject>
    <fields>
        <fullName>FA_Course_Code__c</fullName>
        <label>Course Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FA_Course_Logo__c</fullName>
        <label>Course Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FA_Course_Objective__c</fullName>
        <label>Course Objective</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Course_Overview__c</fullName>
        <label>Course Overview</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FA_Status__c</fullName>
        <description>To capture the status of the Course like,active ,inactive,draft etc.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>FA_Facilitator_Access__c</fullName>
        <label>Facilitator Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>FA_Member_Access__c</fullName>
        <label>Member Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>FA_CourseName_Instructor</fullName>
        <active>false</active>
        <description>Instructor should not be able to edit the course name.</description>
        <errorConditionFormula>IF($Profile.Name=&apos;FA - Instructor&apos;,  ISCHANGED( Name ) ,  false)</errorConditionFormula>
        <errorMessage>Instructor cannot edit the Course Name.</errorMessage>
    </validationRules>
</CustomObject>